Fifty one percent

--- a/content/posts/the-fifty-one-percent-coin.mdx
+++ b/content/posts/the-fifty-one-percent-coin.mdx
@@ -58,10 +58,10 @@ And this is true whether it's a coin, a 6-sided die, or a deck of cards with eve
 
 ## Generalizing intelligence
 
-The same is true of memory, reasoning, or generalization. It doesn't matter if an LLM's memory is as good as a human's or if it can reason as well. 
+This applies to intelligence broadly (whatever that may be); whether it's memory, reasoning, or generalization, it doesn't matter if the LLM is as good as a human, so long as we can scale those expressed behaviors through brute force. 
 
-All that matters is we have a system for memory that: 
+That radically lowers the bar of what we need on the quest to AGI: we don't need a system for memory that is as good as what humans have, we just need one that's good enough. Specifically, one that: 
 1. Gives us non-random distributions over the results
-2. We can scale to be arbitrarily large
+2. For general problems in the domain we want to use it for
 
-So long as it's non-random, scale is all you need. 
+So long as those two are true, scale is all you need. 
